0.4.1 -> Usuwanie osamotmionych plików graficznych